# github-sdv-poc-msp-ipc

./: .gitmodules  CMakeLists.txt
cmake/: FindAsio.cmake
include/ipc/: client.hpp  common.hpp  packet.hpp  server.hpp  util.hpp
ipc/: CMakeLists.txt  package.xml
ipc/include/ipc/: client.hpp  server.hpp
ipc/include/ipc/interface/: client.hpp  server.hpp
ipc/src/: client.cpp  server.cpp
ipc_packet/: CMakeLists.txt  package.xml
ipc_packet/srv/: Packet.srv
src/: client.cpp  packet.cpp  server.cpp
